# mock-backup_wanna_delete

./: README.md  pyproject.toml  query.sql
gcp_mock_generator/: generate.py  main.py  utils.py
tests/: test_main.py
