[tool.poetry]
name = "gcp-mock-generator"
version = "0.1.0"
description = ""
authors = ["socar-bbiyak <bbiyak@socar.kr>"]
readme = "README.md"
packages = [{include = "gcp_mock_generator"}]

[tool.poetry.scripts]
gcp-mock-generator = "gcp_mock_generator.main:app"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
typer = {extras = ["all"], version = "^0.9.0"}
google-cloud-bigquery = "^3.14.1"
google-cloud-secret-manager = "^2.17.0"
pytest = "^7.4.3"
db-dtypes = "^1.2.0"
pandas-gbq = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["gcp_mock_generator"]